--- a/package.json
+++ b/package.json
@@ -5,25 +5,27 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "db:push": "drizzle-kit push:pg",
+    "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.1.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@sentry/nextjs": "^8.12.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@uploadthing/react": "^6.4.1",
     "@upstash/ratelimit": "^1.2.1",
     "@upstash/redis": "^1.32.0",
-    "@vercel/postgres": "^0.7.2",
+    "@vercel/postgres": "^0.9.0",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "drizzle-orm": "^0.29.4",
+    "drizzle-orm": "^0.32.0",
     "geist": "^1.3.0",
+    "jose": "^5.6.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.364.0",
     "next": "^14.1.3",
     "next-themes": "^0.3.0",
@@ -37,16 +39,19 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.7.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "drizzle-kit": "^0.20.14",
+    "drizzle-kit": "^0.23.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-drizzle": "^0.2.3",
