--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@nextui-org/popover": "^2.1.27",
+    "@nextui-org/react": "^2.4.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@sentry/nextjs": "^8.12.0",
     "@t3-oss/env-nextjs": "^0.10.1",
